--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "test": "playwright test",
     "test:frontend": "playwright test frontend-tests/",
     "test:backend": "playwright test backend-tests/",
+    "test:store": "playwright test backend-tests/tests/storeApi.spec.ts",
+    "test:pet": "playwright test backend-tests/tests/petApi.spec.ts",
+    "test:user": "playwright test backend-tests/tests/userApi.spec.ts",
     "test:headed": "playwright test --headed",
     "test:ui": "playwright test --ui",
     "test:debug": "playwright test --headed --debug",
     "test:debug-frontend": "playwright test frontend-tests/ --headed --debug",
+    "test:debug-store": "playwright test backend-tests/tests/storeApi.spec.ts --headed --debug",
+    "test:debug-user": "playwright test backend-tests/tests/userApi.spec.ts --headed --debug",
     "report": "playwright show-report"
   },
   "keywords": ["playwright", "testing", "frontend", "backend"],
