--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "author": "Stajyer",
   "license": "MIT",
   "devDependencies": {
+    "@faker-js/faker": "^9.9.0",
     "@playwright/test": "^1.54.1",
     "dotenv": "^17.2.1",
     "ts-node": "^10.9.2",
