--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@faker-js/faker": "^9.9.0",
     "@playwright/test": "^1.54.2",
     "@types/node": "^24.2.0",
+    "chalk": "^4.1.2",
     "dotenv": "^17.2.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
